--- a/HomePage.html
+++ b/HomePage.html
@@ -386,12 +386,99 @@
                 <!-- 9th card -->
                 <div class="col-md-6 col-lg-4 my-3 expand">
                     <div class="card">
+                        <img src="image/17.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title text-capitalize">The Witcher</h5>
+                            <p class="card-text">
+                                click the button below to order these game<br>
+                                price:<span style="color: red;">$99.99</span>
+                            </p>
+                            <input type="button" class="btn-primary btn-block" value="Order Game">
+                        </div>
+
+                        <div class="card-footer d-flex justify-content-around bg-dark">
+                            <a href="#"><i class="fab fa-facebook fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-twitch fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-twitter fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-youtube fa-2x text-warning"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- 10th card -->
+                 <div class="col-md-6 col-lg-4 my-3 expand">
+                    <div class="card">
+                        <img src="image/15.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title text-capitalize">Anthem</h5>
+                            <p class="card-text">
+                                click the button below to order these game<br>
+                                price:<span style="color: red;">$69.99</span>
+                            </p>
+                            <input type="button" class="btn-primary btn-block" value="Order Game">
+                        </div>
+
+                        <div class="card-footer d-flex justify-content-around bg-dark">
+                            <a href="#"><i class="fab fa-facebook fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-twitch fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-twitter fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-youtube fa-2x text-warning"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+ <!-- 11th card -->
+                <div class="col-md-6 col-lg-4 my-3 expand">
+                    <div class="card">
                         <img src="image/10.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title text-capitalize">Dark Souls</h5>
                             <p class="card-text">
                                 click the button below to order these game<br>
                                 price:<span style="color: red;">$39.99</span>
+                            </p>
+                            <input type="button" class="btn-primary btn-block" value="Order Game">
+                        </div>
+
+                        <div class="card-footer d-flex justify-content-around bg-dark">
+                            <a href="#"><i class="fab fa-facebook fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-twitch fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-twitter fa-2x text-warning"></i>
+                            </a>
+
+                            <a href="#"><i class="fab fa-youtube fa-2x text-warning"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- 12th card -->
+                 <div class="col-md-6 col-lg-4 my-3 expand">
+                    <div class="card">
+                        <img src="image/16.jpg" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title text-capitalize">For Honor</h5>
+                            <p class="card-text">
+                                click the button below to order these game<br>
+                                price:<span style="color: red;">$59.99</span>
                             </p>
                             <input type="button" class="btn-primary btn-block" value="Order Game">
                         </div>
